# path-tracer

./: .gitignore  CMakeLists.txt  README.md
doc/: peer_review.txt
plan/: UML_PATH_TRACER.xml
src/: .gitignore  CMakeLists.txt  README.md
src/include/: camera.h  ray.h  vec3.h
src/include/camera/: camera.cpp  camera.h
src/include/geometry/: box.cpp  box.h  bv_node.cpp  bv_node.h  geometry.cpp  geometry.h  geometry.hpp  geomlist.cpp  geomlist.h  sphere.cpp  sphere.h
src/include/hitable/: hitable.h
src/include/image_reader/: image_reader.cpp  image_reader.h
src/include/intersection/: bounding_box.cpp  bounding_box.h
src/include/io/: io.cpp  io.h
src/include/material/: material.cpp  material.h
src/include/pdf/: onb.cpp  onb.h  pdf.cpp  pdf.h
src/include/ray/: ray.h
src/include/texture/: perlin.cpp  perlin.h  texture.cpp  texture.h
src/include/vector/: vec3.h
src/lib/nlohmann/: json.hpp
src/src/: geometry.cpp  main  main.cpp  ray.cpp
src/tests/: CMakeLists.txt
src/tests/geometry_tests/: CMakeLists.txt  geometry_check.cpp
src/tests/ray_tests/: CMakeLists.txt  ray_check.cpp
src/tests/vector_tests/: CMakeLists.txt  algebra_check.cpp
