cmake_minimum_required(VERSION 3.12)
project(path_tracer_4)

set(CMAKE_CXX_STANDARD 14)

include_directories(src/include)
include_directories(src/include/vector)
include_directories(src/tests/lib/gtest/fused-src/gtest)
include_directories(src/tests/lib/gtest/include)
include_directories(src/tests/lib/gtest/include/gtest)
include_directories(src/tests/lib/gtest/include/gtest/internal)
include_directories(src/tests/lib/gtest/samples)
include_directories(src/tests/lib/gtest/src)
include_directories(src/tests/lib/gtest/test)
include_directories(src/tests/lib/gtest/xcode/Samples/FrameworkSample)

add_executable(path_tracer_4
        src/include/vector/vec3.h
        src/include/ray.h
        src/src/main.cpp
        src/tests/lib/gtest/codegear/gtest_all.cc
        src/tests/lib/gtest/codegear/gtest_link.cc
        src/tests/lib/gtest/fused-src/gtest/gtest-all.cc
        src/tests/lib/gtest/fused-src/gtest/gtest.h
        src/tests/lib/gtest/fused-src/gtest/gtest_main.cc
        src/tests/lib/gtest/include/gtest/internal/gtest-death-test-internal.h
        src/tests/lib/gtest/include/gtest/internal/gtest-filepath.h
        src/tests/lib/gtest/include/gtest/internal/gtest-internal.h
        src/tests/lib/gtest/include/gtest/internal/gtest-linked_ptr.h
        src/tests/lib/gtest/include/gtest/internal/gtest-param-util-generated.h
        src/tests/lib/gtest/include/gtest/internal/gtest-param-util.h
        src/tests/lib/gtest/include/gtest/internal/gtest-port.h
        src/tests/lib/gtest/include/gtest/internal/gtest-string.h
        src/tests/lib/gtest/include/gtest/internal/gtest-tuple.h
        src/tests/lib/gtest/include/gtest/internal/gtest-type-util.h
        src/tests/lib/gtest/include/gtest/gtest-death-test.h
        src/tests/lib/gtest/include/gtest/gtest-message.h
        src/tests/lib/gtest/include/gtest/gtest-param-test.h
        src/tests/lib/gtest/include/gtest/gtest-printers.h
        src/tests/lib/gtest/include/gtest/gtest-spi.h
        src/tests/lib/gtest/include/gtest/gtest-test-part.h
        src/tests/lib/gtest/include/gtest/gtest-typed-test.h
        src/tests/lib/gtest/include/gtest/gtest.h
        src/tests/lib/gtest/include/gtest/gtest_pred_impl.h
        src/tests/lib/gtest/include/gtest/gtest_prod.h
        src/tests/lib/gtest/samples/prime_tables.h
        src/tests/lib/gtest/samples/sample1.cc
        src/tests/lib/gtest/samples/sample1.h
        src/tests/lib/gtest/samples/sample10_unittest.cc
        src/tests/lib/gtest/samples/sample1_unittest.cc
        src/tests/lib/gtest/samples/sample2.cc
        src/tests/lib/gtest/samples/sample2.h
        src/tests/lib/gtest/samples/sample2_unittest.cc
        src/tests/lib/gtest/samples/sample3-inl.h
        src/tests/lib/gtest/samples/sample3_unittest.cc
        src/tests/lib/gtest/samples/sample4.cc
        src/tests/lib/gtest/samples/sample4.h
        src/tests/lib/gtest/samples/sample4_unittest.cc
        src/tests/lib/gtest/samples/sample5_unittest.cc
        src/tests/lib/gtest/samples/sample6_unittest.cc
        src/tests/lib/gtest/samples/sample7_unittest.cc
        src/tests/lib/gtest/samples/sample8_unittest.cc
        src/tests/lib/gtest/samples/sample9_unittest.cc
        src/tests/lib/gtest/src/gtest-all.cc
        src/tests/lib/gtest/src/gtest-death-test.cc
        src/tests/lib/gtest/src/gtest-filepath.cc
        src/tests/lib/gtest/src/gtest-internal-inl.h
        src/tests/lib/gtest/src/gtest-port.cc
        src/tests/lib/gtest/src/gtest-printers.cc
        src/tests/lib/gtest/src/gtest-test-part.cc
        src/tests/lib/gtest/src/gtest-typed-test.cc
        src/tests/lib/gtest/src/gtest.cc
        src/tests/lib/gtest/src/gtest_main.cc
        src/tests/lib/gtest/test/gtest-death-test_ex_test.cc
        src/tests/lib/gtest/test/gtest-death-test_test.cc
        src/tests/lib/gtest/test/gtest-filepath_test.cc
        src/tests/lib/gtest/test/gtest-linked_ptr_test.cc
        src/tests/lib/gtest/test/gtest-listener_test.cc
        src/tests/lib/gtest/test/gtest-message_test.cc
        src/tests/lib/gtest/test/gtest-options_test.cc
        src/tests/lib/gtest/test/gtest-param-test2_test.cc
        src/tests/lib/gtest/test/gtest-param-test_test.cc
        src/tests/lib/gtest/test/gtest-param-test_test.h
        src/tests/lib/gtest/test/gtest-port_test.cc
        src/tests/lib/gtest/test/gtest-printers_test.cc
        src/tests/lib/gtest/test/gtest-test-part_test.cc
        src/tests/lib/gtest/test/gtest-tuple_test.cc
        src/tests/lib/gtest/test/gtest-typed-test2_test.cc
        src/tests/lib/gtest/test/gtest-typed-test_test.cc
        src/tests/lib/gtest/test/gtest-typed-test_test.h
        src/tests/lib/gtest/test/gtest-unittest-api_test.cc
        src/tests/lib/gtest/test/gtest_all_test.cc
        src/tests/lib/gtest/test/gtest_break_on_failure_unittest_.cc
        src/tests/lib/gtest/test/gtest_catch_exceptions_test_.cc
        src/tests/lib/gtest/test/gtest_color_test_.cc
        src/tests/lib/gtest/test/gtest_env_var_test_.cc
        src/tests/lib/gtest/test/gtest_environment_test.cc
        src/tests/lib/gtest/test/gtest_filter_unittest_.cc
        src/tests/lib/gtest/test/gtest_help_test_.cc
        src/tests/lib/gtest/test/gtest_list_tests_unittest_.cc
        src/tests/lib/gtest/test/gtest_main_unittest.cc
        src/tests/lib/gtest/test/gtest_no_test_unittest.cc
        src/tests/lib/gtest/test/gtest_output_test_.cc
        src/tests/lib/gtest/test/gtest_pred_impl_unittest.cc
        src/tests/lib/gtest/test/gtest_premature_exit_test.cc
        src/tests/lib/gtest/test/gtest_prod_test.cc
        src/tests/lib/gtest/test/gtest_repeat_test.cc
        src/tests/lib/gtest/test/gtest_shuffle_test_.cc
        src/tests/lib/gtest/test/gtest_sole_header_test.cc
        src/tests/lib/gtest/test/gtest_stress_test.cc
        src/tests/lib/gtest/test/gtest_throw_on_failure_ex_test.cc
        src/tests/lib/gtest/test/gtest_throw_on_failure_test_.cc
        src/tests/lib/gtest/test/gtest_uninitialized_test_.cc
        src/tests/lib/gtest/test/gtest_unittest.cc
        src/tests/lib/gtest/test/gtest_xml_outfile1_test_.cc
        src/tests/lib/gtest/test/gtest_xml_outfile2_test_.cc
        src/tests/lib/gtest/test/gtest_xml_output_unittest_.cc
        src/tests/lib/gtest/test/production.cc
        src/tests/lib/gtest/test/production.h
        src/tests/lib/gtest/xcode/Samples/FrameworkSample/widget.cc
        src/tests/lib/gtest/xcode/Samples/FrameworkSample/widget.h
        src/tests/lib/gtest/xcode/Samples/FrameworkSample/widget_test.cc
        src/tests/ray_tests/ray_check.cpp
        src/tests/vector_tests/algebra_check.cpp)
